// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications-flyout/NotificationsFlyout renders a notification with the \`children\` prop 1`] = `
.emotion-6 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  position: absolute;
  display: none;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 polygon:first-child {
  fill: transparent;
}

.emotion-1 polygon:last-child {
  fill: #ffffff;
}

.emotion-4 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-3 {
  position: relative;
}

<div
  className="emotion-6 hig__flyout-v1--hidden hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  >
    <div
      className="hig__notifications-flyout__indicator"
    >
      <button
        className="hig__icon-button hig__icon-button--transparent"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        title="View notifications"
      >
        <span
          className="hig__icon-button__icon"
        >
          <div
            className="hig__icon hig__icon--24-size"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"4651 1106 24 24\\" role=\\"img\\" title=\\"notification-24\\"><path d=\\"M4669.931,1120.406l-0.112-0.05c-0.803-0.358-0.803-0.358-0.795-1.51l0.002-0.775c0.008-4.383-1.382-7.12-4.023-7.952V1109	c0-0.495-0.505-1-1-1h-2c-0.495,0-1,0.505-1,1v1.119c-2.653,0.833-4.051,3.571-4.047,7.952l0.002,0.778	c0.008,1.148,0.008,1.148-0.794,1.507l-0.111,0.05c-1.961,0.878-2.049,3.592-2.052,3.7c-0.009,0.248,0.087,0.49,0.253,0.656	c0.226,0.237,0.513,0.237,0.651,0.237H4660c0,1.654,1.346,3,3,3s3-1.346,3-3h5.078c0.137,0,0.42,0,0.647-0.233	c0.167-0.172,0.261-0.409,0.256-0.669C4671.962,1123.626,4671.77,1121.229,4669.931,1120.406z M4663,1127c-1.103,0-2-0.897-2-2h4	C4665,1126.103,4664.102,1127,4663,1127z M4655.009,1124c0.04-0.491,0.266-2.15,1.451-2.682l0.11-0.049	c1.171-0.522,1.399-0.77,1.387-2.425l-0.002-0.774c-0.002-2.838,0.631-6.37,3.66-7.084l0.387-0.091V1109h2v1.896l0.386,0.091	c3.016,0.71,3.643,4.244,3.638,7.083l-0.002,0.773c-0.011,1.657,0.218,1.904,1.389,2.427l0.11,0.049	c1.225,0.549,1.424,2.291,1.477,2.682H4655.009z\\"/></svg>",
              }
            }
          />
        </span>
      </button>
      <div
        className="hig__notifications-flyout__indicator__count"
      >
        1
      </div>
    </div>
  </div>
  <div
    className="emotion-5 hig__flyout-v1__container"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-2 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        className="emotion-1"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          points="0,12 12,0 24,12"
        />
        <polygon
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-4 hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-3 hig__flyout-v1__panel-container__inner"
      >
        <header
          className="hig__notifications-flyout__panel__title"
        >
          Notifications
        </header>
        <section
          className="hig__notifications-flyout__panel__container"
          style={
            Object {
              "maxHeight": "",
            }
          }
        >
          <div
            onScroll={undefined}
            role="list"
          >
            <div
              className="hig__notification-v1"
              role="listitem"
              style={
                Object {
                  "height": "",
                }
              }
            >
              <div
                className="hig__notification-v1__content hig__notification-v1__content--unread"
              >
                <div
                  className="hig__notification-v1__content-text"
                >
                  <div
                    className="hig__rich-text hig__rich-text--small"
                    dangerouslySetInnerHTML={undefined}
                  />
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="hig__notifications-flyout__panel__loading"
        >
          <div
            data-props="{
  \\"size\\": \\"s\\"
}"
          />
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`notifications-flyout/NotificationsFlyout renders a notification with the \`notifications\` prop 1`] = `
.emotion-6 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  position: absolute;
  display: none;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 polygon:first-child {
  fill: transparent;
}

.emotion-1 polygon:last-child {
  fill: #ffffff;
}

.emotion-4 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-3 {
  position: relative;
}

<div
  className="emotion-6 hig__flyout-v1--hidden hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  >
    <div
      className="hig__notifications-flyout__indicator"
    >
      <button
        className="hig__icon-button hig__icon-button--transparent"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        title="View notifications"
      >
        <span
          className="hig__icon-button__icon"
        >
          <div
            className="hig__icon hig__icon--24-size"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"4651 1106 24 24\\" role=\\"img\\" title=\\"notification-24\\"><path d=\\"M4669.931,1120.406l-0.112-0.05c-0.803-0.358-0.803-0.358-0.795-1.51l0.002-0.775c0.008-4.383-1.382-7.12-4.023-7.952V1109	c0-0.495-0.505-1-1-1h-2c-0.495,0-1,0.505-1,1v1.119c-2.653,0.833-4.051,3.571-4.047,7.952l0.002,0.778	c0.008,1.148,0.008,1.148-0.794,1.507l-0.111,0.05c-1.961,0.878-2.049,3.592-2.052,3.7c-0.009,0.248,0.087,0.49,0.253,0.656	c0.226,0.237,0.513,0.237,0.651,0.237H4660c0,1.654,1.346,3,3,3s3-1.346,3-3h5.078c0.137,0,0.42,0,0.647-0.233	c0.167-0.172,0.261-0.409,0.256-0.669C4671.962,1123.626,4671.77,1121.229,4669.931,1120.406z M4663,1127c-1.103,0-2-0.897-2-2h4	C4665,1126.103,4664.102,1127,4663,1127z M4655.009,1124c0.04-0.491,0.266-2.15,1.451-2.682l0.11-0.049	c1.171-0.522,1.399-0.77,1.387-2.425l-0.002-0.774c-0.002-2.838,0.631-6.37,3.66-7.084l0.387-0.091V1109h2v1.896l0.386,0.091	c3.016,0.71,3.643,4.244,3.638,7.083l-0.002,0.773c-0.011,1.657,0.218,1.904,1.389,2.427l0.11,0.049	c1.225,0.549,1.424,2.291,1.477,2.682H4655.009z\\"/></svg>",
              }
            }
          />
        </span>
      </button>
      <div
        className="hig__notifications-flyout__indicator__count"
      >
        1
      </div>
    </div>
  </div>
  <div
    className="emotion-5 hig__flyout-v1__container"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-2 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        className="emotion-1"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          points="0,12 12,0 24,12"
        />
        <polygon
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-4 hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-3 hig__flyout-v1__panel-container__inner"
      >
        <header
          className="hig__notifications-flyout__panel__title"
        >
          Notifications
        </header>
        <section
          className="hig__notifications-flyout__panel__container"
          style={
            Object {
              "maxHeight": "",
            }
          }
        >
          <div
            onScroll={undefined}
            role="list"
          >
            <div
              className="hig__notification-v1"
              role="listitem"
              style={
                Object {
                  "height": "",
                }
              }
            >
              <div
                className="hig__notification-v1__content hig__notification-v1__content--unread"
              >
                <div
                  className="hig__notification-v1__content-text"
                >
                  <div
                    className="hig__rich-text hig__rich-text--small"
                    dangerouslySetInnerHTML={undefined}
                  />
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="hig__notifications-flyout__panel__loading"
        >
          <div
            data-props="{
  \\"size\\": \\"s\\"
}"
          />
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`notifications-flyout/NotificationsFlyout renders with all props 1`] = `
.emotion-6 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 polygon:first-child {
  fill: transparent;
}

.emotion-1 polygon:last-child {
  fill: #ffffff;
}

.emotion-4 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-3 {
  position: relative;
}

.emotion-5 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<div
  className="emotion-6 hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  >
    <div
      className="hig__notifications-flyout__indicator"
    >
      <button
        className="hig__icon-button hig__icon-button--transparent"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        title="World"
      >
        <span
          className="hig__icon-button__icon"
        >
          <div
            className="hig__icon hig__icon--24-size"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"4651 1106 24 24\\" role=\\"img\\" title=\\"notification-24\\"><path d=\\"M4669.931,1120.406l-0.112-0.05c-0.803-0.358-0.803-0.358-0.795-1.51l0.002-0.775c0.008-4.383-1.382-7.12-4.023-7.952V1109	c0-0.495-0.505-1-1-1h-2c-0.495,0-1,0.505-1,1v1.119c-2.653,0.833-4.051,3.571-4.047,7.952l0.002,0.778	c0.008,1.148,0.008,1.148-0.794,1.507l-0.111,0.05c-1.961,0.878-2.049,3.592-2.052,3.7c-0.009,0.248,0.087,0.49,0.253,0.656	c0.226,0.237,0.513,0.237,0.651,0.237H4660c0,1.654,1.346,3,3,3s3-1.346,3-3h5.078c0.137,0,0.42,0,0.647-0.233	c0.167-0.172,0.261-0.409,0.256-0.669C4671.962,1123.626,4671.77,1121.229,4669.931,1120.406z M4663,1127c-1.103,0-2-0.897-2-2h4	C4665,1126.103,4664.102,1127,4663,1127z M4655.009,1124c0.04-0.491,0.266-2.15,1.451-2.682l0.11-0.049	c1.171-0.522,1.399-0.77,1.387-2.425l-0.002-0.774c-0.002-2.838,0.631-6.37,3.66-7.084l0.387-0.091V1109h2v1.896l0.386,0.091	c3.016,0.71,3.643,4.244,3.638,7.083l-0.002,0.773c-0.011,1.657,0.218,1.904,1.389,2.427l0.11,0.049	c1.225,0.549,1.424,2.291,1.477,2.682H4655.009z\\"/></svg>",
              }
            }
          />
        </span>
      </button>
      <div
        className="hig__notifications-flyout__indicator__count"
      >
        44
      </div>
    </div>
  </div>
  <div
    className="emotion-5 hig__flyout-v1__container"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-2 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        className="emotion-1"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          points="0,12 12,0 24,12"
        />
        <polygon
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-4 hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-3 hig__flyout-v1__panel-container__inner"
      >
        <header
          className="hig__notifications-flyout__panel__title"
        >
          Hello
        </header>
        <section
          className="hig__notifications-flyout__panel__container"
          style={
            Object {
              "maxHeight": "",
            }
          }
        >
          <div
            onScroll={[Function]}
            role="list"
          >
            <div
              className="hig__notification-v1"
              role="listitem"
              style={
                Object {
                  "height": "",
                }
              }
            >
              <div
                className="hig__notification-v1__content hig__notification-v1__content--unread"
              >
                <div
                  className="hig__notification-v1__content-text"
                >
                  <div
                    className="hig__rich-text hig__rich-text--small"
                    dangerouslySetInnerHTML={undefined}
                  />
                </div>
              </div>
            </div>
            <div
              className="hig__notification-v1"
              role="listitem"
              style={
                Object {
                  "height": "",
                }
              }
            >
              <div
                className="hig__notification-v1__content hig__notification-v1__content--unread"
              >
                <div
                  className="hig__notification-v1__content-text"
                >
                  <div
                    className="hig__rich-text hig__rich-text--small"
                    dangerouslySetInnerHTML={undefined}
                  />
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="hig__notifications-flyout__panel__loading hig__notifications-flyout__panel__loading--open"
        >
          <div
            data-props="{
  \\"size\\": \\"s\\"
}"
          />
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`notifications-flyout/NotificationsFlyout renders without props 1`] = `
.emotion-6 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  position: absolute;
  display: none;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 polygon:first-child {
  fill: transparent;
}

.emotion-1 polygon:last-child {
  fill: #ffffff;
}

.emotion-4 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-3 {
  position: relative;
}

<div
  className="emotion-6 hig__flyout-v1--hidden hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  >
    <div
      className="hig__notifications-flyout__indicator"
    >
      <button
        className="hig__icon-button hig__icon-button--transparent"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        title="View notifications"
      >
        <span
          className="hig__icon-button__icon"
        >
          <div
            className="hig__icon hig__icon--24-size"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"4651 1106 24 24\\" role=\\"img\\" title=\\"notification-24\\"><path d=\\"M4669.931,1120.406l-0.112-0.05c-0.803-0.358-0.803-0.358-0.795-1.51l0.002-0.775c0.008-4.383-1.382-7.12-4.023-7.952V1109	c0-0.495-0.505-1-1-1h-2c-0.495,0-1,0.505-1,1v1.119c-2.653,0.833-4.051,3.571-4.047,7.952l0.002,0.778	c0.008,1.148,0.008,1.148-0.794,1.507l-0.111,0.05c-1.961,0.878-2.049,3.592-2.052,3.7c-0.009,0.248,0.087,0.49,0.253,0.656	c0.226,0.237,0.513,0.237,0.651,0.237H4660c0,1.654,1.346,3,3,3s3-1.346,3-3h5.078c0.137,0,0.42,0,0.647-0.233	c0.167-0.172,0.261-0.409,0.256-0.669C4671.962,1123.626,4671.77,1121.229,4669.931,1120.406z M4663,1127c-1.103,0-2-0.897-2-2h4	C4665,1126.103,4664.102,1127,4663,1127z M4655.009,1124c0.04-0.491,0.266-2.15,1.451-2.682l0.11-0.049	c1.171-0.522,1.399-0.77,1.387-2.425l-0.002-0.774c-0.002-2.838,0.631-6.37,3.66-7.084l0.387-0.091V1109h2v1.896l0.386,0.091	c3.016,0.71,3.643,4.244,3.638,7.083l-0.002,0.773c-0.011,1.657,0.218,1.904,1.389,2.427l0.11,0.049	c1.225,0.549,1.424,2.291,1.477,2.682H4655.009z\\"/></svg>",
              }
            }
          />
        </span>
      </button>
      <div
        className="hig__notifications-flyout__indicator__count hig__notifications-flyout__indicator__count--hide"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="emotion-5 hig__flyout-v1__container"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-2 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        className="emotion-1"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          points="0,12 12,0 24,12"
        />
        <polygon
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-4 hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-3 hig__flyout-v1__panel-container__inner"
      >
        <header
          className="hig__notifications-flyout__panel__title"
        >
          Notifications
        </header>
        <section
          className="hig__notifications-flyout__panel__container"
          style={
            Object {
              "maxHeight": "",
            }
          }
        >
          <div
            onScroll={undefined}
            role="list"
          >
            <div
              className="hig__notification-flyout-v1__empty-state"
            >
              <test-file-stub
                className="hig__notification-flyout-v1__empty-state-image"
                role="presentation"
              />
              <p
                className="hig__notification-flyout-v1__empty-state-message"
              >
                You currently have no notifications
              </p>
            </div>
          </div>
        </section>
        <footer
          className="hig__notifications-flyout__panel__loading"
        >
          <div
            data-props="{
  \\"size\\": \\"s\\"
}"
          />
        </footer>
      </div>
    </div>
  </div>
</div>
`;
